# steam_asyncio

./: .gitignore  Taskfile.yml  protobuf_list.txt  pyproject.toml  test.py
.github/workflows/: check.yml  codeql.yml
docs/: conf.py
examples/login/: diy_one_off_login.py  one_off_login.py  persistent_login.py  pyproject.toml
examples/simple_web_api/: pyproject.toml  run_webapi.py  steam_worker.py
examples/wallet_balance/: pyproject.toml  wallet_steamclient.py  wallet_webauth.py
protobufs/: clientmetrics.proto  content_manifest.proto  contenthubs.proto  enums.proto  enums_clientserver.proto  enums_productinfo.proto  htmlmessages.proto  steamdatagram_messages_auth.proto  steamdatagram_messages_sdr.proto  steammessages_accounthardware.proto  steammessages_appoverview.proto  steammessages_auth.proto  steammessages_base.proto  steammessages_broadcast.proto  steammessages_chat.proto  steammessages_client_objects.proto  steammessages_clientlanp2p.proto  steammessages_clientmetrics.proto  steammessages_clientnotificationtypes.proto  steammessages_clientserver.proto  steammessages_clientserver_2.proto  steammessages_clientserver_appinfo.proto  steammessages_clientserver_friends.proto  steammessages_clientserver_gameservers.proto  steammessages_clientserver_lbs.proto  steammessages_clientserver_login.proto  steammessages_clientserver_mms.proto  steammessages_clientserver_ucm.proto  steammessages_clientserver_uds.proto  steammessages_clientserver_ufs.proto  steammessages_clientserver_video.proto  steammessages_clientsettings.proto  steammessages_cloud.proto  steammessages_community.proto  steammessages_contentsystem.proto  steammessages_credentials.proto  steammessages_datapublisher.proto  steammessages_depotbuilder.proto  steammessages_deviceauth.proto  steammessages_econ.proto  (+60 more)
recipes/1.Login/: diy_one_off_login.py  one_off_login.py  persistent_login.py
recipes/2.SimpleWebAPI/: run_webapi.py  steam_worker.py
recipes/3.WalletBalance/: wallet_steamclient.py  wallet_webauth.py
src/steam/: __init__.py  exceptions.py  game_servers.py  globalid.py  guard.py  monkey.py  steamid.py  webapi.py  webauth.py
src/steam/client/: __init__.py  cdn.py  gc.py  user.py
src/steam/client/builtins/: __init__.py  apps.py  friends.py  gameservers.py  leaderboards.py  unified_messages.py  user.py  web.py
src/steam/core/: cm.py  connection.py  crypto.py  eventemitter.py  manifest.py
src/steam/core/msg/: __init__.py  headers.py  structs.py  unified.py
src/steam/enums/: common.py  emsg.py  proto.py
src/steam/protobufs/: clientmetrics_pb2.py  clientmetrics_pb2.pyi  content_manifest_pb2.py  content_manifest_pb2.pyi  contenthubs_pb2.py  contenthubs_pb2.pyi  encrypted_app_ticket_pb2.py  encrypted_app_ticket_pb2.pyi  enums_clientserver_pb2.py  enums_clientserver_pb2.pyi  enums_pb2.py  enums_pb2.pyi  enums_productinfo_pb2.py  enums_productinfo_pb2.pyi  htmlmessages_pb2.py  htmlmessages_pb2.pyi  offline_ticket_pb2.py  offline_ticket_pb2.pyi  steamdatagram_messages_auth_pb2.py  steamdatagram_messages_auth_pb2.pyi  steamdatagram_messages_sdr_pb2.py  steamdatagram_messages_sdr_pb2.pyi  steammessages_accounthardware_pb2.py  steammessages_accounthardware_pb2.pyi  steammessages_appoverview_pb2.py  steammessages_appoverview_pb2.pyi  steammessages_auth_pb2.py  steammessages_auth_pb2.pyi  steammessages_base_pb2.py  steammessages_base_pb2.pyi  steammessages_broadcast_pb2.py  steammessages_broadcast_pb2.pyi  steammessages_chat_pb2.py  steammessages_chat_pb2.pyi  steammessages_client_objects_pb2.py  steammessages_client_objects_pb2.pyi  steammessages_clientlanp2p_pb2.py  steammessages_clientlanp2p_pb2.pyi  steammessages_clientmetrics_pb2.py  steammessages_clientmetrics_pb2.pyi  (+172 more)
src/steam/utils/: __init__.py  appcache.py  binary.py  proto.py  throttle.py  web.py
src/steam/versions_report/: __init__.py
steam/client/: cdn.py
steam/core/: cm.py
tests/: generete_webauth_vcr.py  test_core_cm.py  test_core_crypto.py  test_game_servers.py  test_guard.py  test_steamid.py  test_utils.py  test_webapi.py  test_webauth.py
tools/: __init__.py  clean.py  set_python_version.py
tools/protobuf/: __init__.py  clean.py  compile.py  fetch.py  generate_enums.py  services.py
