[project]
name = "steam"
version = "1.6.2"
description = "Module for interacting with various Steam features"
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "cachetools>=5.5.0",
    "pycryptodomex>=3.21.0",
    "vdf",
    "protobuf>=5.29.2",
    "websockets>=14.1",
    "aiohttp>=3.11.11",
    "lxml>=5.3.0",
]

[dependency-groups]
dev = [
    "coverage>=7.6.9",
    "coveralls>=4.0.1",
    "mock>=5.1.0",
    "pytest-cov>=6.0.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "ruff>=0.8.3",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "vcrpy>=6.0.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
vdf = { git = "https://github.com/solsticegamestudios/vdf.git", rev = "v4.0" }

[tool.uv.workspace]
members = ["examples/wallet_balance", "examples/simple_web_api", "examples/login"]

[tool.coverage.run]
branch = false
omit = ["src/steam/protobufs/*", "src/steam/enums/*"]
relative_files = true

[tool.ruff]
line-length = 100
preview = true
fix = true
exclude = ["src/steam/protobufs", "src/steam/enums/proto.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "N", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
